<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="action_failed">Action failed</string>
    <string name="add_repository">Add repository</string>
    <string name="address">Address</string>
    <string name="all_applications">All Apps</string>
    <string name="all_applications_up_to_date">All apps are up-to-date</string>
    <string name="already_exists">Already exists</string>
    <string name="always">Always</string>
    <string name="amoled">Black</string>
    <string name="anti_features">Anti-features</string>
    <string name="application">App</string>
    <string name="application_not_found">Could not find that app</string>
    <string name="author_email">Author\'s e-mail</string>
    <string name="author_website">Author\'s website</string>
    <string name="available">Available</string>
    <string name="bug_tracker">Bug tracker</string>
    <string name="cancel">Cancel</string>
    <string name="cant_edit_sync_DESC">Cannot edit syncing repositories…</string>
    <string name="changelog">Changelog</string>
    <string name="changes">Changes</string>
    <string name="checking_repository">Checking repository…</string>
    <string name="compiled_for_debugging">Compiled for debugging</string>
    <string name="confirmation">Confirmation</string>
    <string name="connecting">Connecting…</string>
    <string name="contains_non_free_media">Contains non-libre media</string>
    <string name="could_not_download_FORMAT">Could not download %s</string>
    <string name="could_not_sync_FORMAT">Could not sync %s</string>
    <string name="could_not_validate_FORMAT">Could not validate %s</string>
    <string name="credits">Contributors</string>
    <string name="dark">Dark</string>
    <string name="delete">Delete</string>
    <string name="delete_repository_DESC">Delete this repository?</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="donate">Donate</string>
    <string name="downloaded_FORMAT">Downloaded %s</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_FORMAT">Downloading %s…</string>
    <string name="edit_repository">Edit repository</string>
    <string name="file_format_error_DESC">Invalid file format.</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="has_advertising">Has advertising</string>
    <string name="has_non_free_dependencies">Has non-libre dependencies</string>
    <string name="has_security_vulnerabilities">Has security vulnerabilities</string>
    <string name="http_error_DESC">Invalid server response.</string>
    <string name="http_proxy">HTTP proxy</string>
    <string name="ignore_all_updates">Ignore all new versions</string>
    <string name="ignore_this_update">Ignore this version</string>
    <string name="incompatible_api_DESC_FORMAT">Your %1$s (API version %2$d) is not supported. %3$s</string>
    <string name="incompatible_api_max_DESC_FORMAT">The max API version is %d.</string>
    <string name="incompatible_api_min_DESC_FORMAT">The min API version is %d.</string>
    <string name="incompatible_features_DESC">Missing features.</string>
    <string name="incompatible_older_DESC">This version is older than the one installed on your device.
    Uninstall that first.</string>
    <string name="incompatible_platforms_DESC_FORMAT">Your %1$s platform is not supported.
    Supported platforms: %2$s.</string>
    <string name="incompatible_signature_DESC">This version is signed with a different certificate than the one
    installed on your device.\nUninstall that first.</string>
    <string name="incompatible_version">Incompatible version</string>
    <string name="incompatible_versions">Incompatible versions</string>
    <string name="incompatible_versions_summary">Show versions incompatible with the device.</string>
    <string name="incompatible_with_FORMAT">Incompatible with %s</string>
    <string name="install">Install</string>
    <string name="install_types">Installation Types</string>
    <string name="installed">Installed</string>
    <string name="integrity_check_error_DESC">Could not check integrity.</string>
    <string name="invalid_address">Invalid address</string>
    <string name="invalid_fingerprint_format">Invalid fingerprint format</string>
    <string name="invalid_metadata_error_DESC">Invalid metadata.</string>
    <string name="invalid_permissions_error_DESC">Invalid permissions.</string>
    <string name="invalid_signature_error_DESC">Invalid signature.</string>
    <string name="invalid_username_format">Invalid username format</string>
    <string name="launch">Launch</string>
    <string name="license">License</string>
    <string name="license_FORMAT">%s license</string>
    <string name="light">Light</string>
    <string name="link_copied_to_clipboard">Link copied to clipboard</string>
    <string name="links">Links</string>
    <string name="list_animation">List animations</string>
    <string name="list_animation_description">Animate the list on the main page</string>
    <string name="merging_FORMAT">Merging %s…</string>
    <string name="name">Name</string>
    <string name="network_error_DESC">Network error.</string>
    <string name="never">Never</string>
    <string name="new_updates_available">New versions available</string>
    <plurals name="new_updates_DESC_FORMAT">
        <item quantity="one">%d app has a new version.</item>
        <item quantity="other">%d apps with new versions.</item>
    </plurals>
    <string name="no_applications_available">No available apps</string>
    <string name="no_applications_installed">No installed apps</string>
    <string name="no_description_available_DESC">No description.</string>
    <string name="no_matching_applications_found">Could not find any such apps</string>
    <string name="no_proxy">No proxy</string>
    <string name="notify_about_updates">Notify about new versions of apps</string>
    <string name="notify_about_updates_summary">Show a notification when new versions are available.</string>
    <string name="number_of_applications">Number of apps</string>
    <string name="ok">OK</string>
    <string name="only_compatible_with_FORMAT">Only compatible with %s</string>
    <string name="only_on_wifi">Only on Wi-Fi</string>
    <string name="only_on_wifi_and_battery">Only on Wi-Fi and plugged-in</string>
    <string name="open_DESC_FORMAT">Open %s?</string>
    <string name="other">Other</string>
    <string name="parsing_index_error_DESC">Could not parse the index file.</string>
    <string name="password">Password</string>
    <string name="password_missing">Password missing</string>
    <string name="permissions">Permissions</string>
    <string name="no_permissions_identified">No requested permissions identified</string>
    <string name="plus_more_FORMAT">+%d more</string>
    <string name="settings">Settings</string>
    <string name="processing_FORMAT">Processing %1$s…</string>
    <string name="project_website">Project website</string>
    <string name="promotes_non_free_network_services">Promotes non-libre network services</string>
    <string name="promotes_non_free_software">Promotes non-libre software</string>
    <string name="provided_by_FORMAT">Provided by %s</string>
    <string name="proxy">Proxy</string>
    <string name="proxy_host">Host</string>
    <string name="proxy_port">Port</string>
    <string name="proxy_type">Type</string>
    <string name="recently_updated">Recently updated</string>
    <string name="repositories">Repositories</string>
    <string name="repository">Repository</string>
    <string name="repository_not_used_DESC">This repository has not been used yet.\nConnect to it to view the apps in it.</string>
    <string name="repository_unsigned_DESC">Could not verify unsigned app list.\nBe careful downloading apps from unsigned repositories.</string>
    <string name="requires_FORMAT">Requires %s</string>
    <string name="root_permission">Silent install</string>
    <string name="root_permission_description">Use root for installs without interaction</string>
    <string name="save">Save</string>
    <string name="saving_details">Saving details…</string>
    <string name="screenshots">Screenshots</string>
    <string name="search">Search</string>
    <string name="select_mirror">Select a mirror</string>
    <string name="share">Share</string>
    <string name="show_more">Show more</string>
    <string name="show_older_versions">Show older versions</string>
    <string name="signature_FORMAT">Signature %s</string>
    <string name="signed_using_unsafe_algorithm">Signed using an unsafe algorithm</string>
    <string name="size">Size</string>
    <string name="skip">Skip</string>
    <string name="socks_proxy">SOCKS proxy</string>
    <string name="sorting_order">Sorting order</string>
    <string name="source_code">Source code</string>
    <string name="source_code_no_longer_available">Source code no longer available</string>
    <string name="suggested">Suggested</string>
    <string name="app_installed">Installed</string>
    <string name="sync_repositories">Sync repositories</string>
    <string name="sync_repositories_automatically">Auto-sync repositories</string>
    <string name="syncing">Syncing</string>
    <string name="syncing_FORMAT">Syncing %s…</string>
    <string name="system">System</string>
    <string name="system_black">System (Black)</string>
    <string name="tap_to_install_DESC">Tap to install.</string>
    <string name="target">Target</string>
    <string name="theme">Theme</string>
    <string name="themes">Themes</string>
    <string name="tracks_or_reports_your_activity">Tracks or reports your activity</string>
    <string name="uninstall">Uninstall</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_error_DESC">Unknown error.</string>
    <string name="unknown_FORMAT">Unknown: %s</string>
    <string name="unsigned">Unsigned</string>
    <string name="unstable_updates">Unstable updates</string>
    <string name="unstable_updates_summary">Suggest installing unstable versions.</string>
    <string name="unverified">Unverified</string>
    <string name="update">Update</string>
    <string name="updates">Updates</string>
    <string name="upstream_source_code_is_not_free">The upstream source code is not libre</string>
    <string name="not_safe_for_work">Censorable (may contain disturbing content)</string>
    <string name="username">Username</string>
    <string name="username_missing">Username missing</string>
    <string name="validation_index_error_DESC">Could not validate index.</string>
    <string name="version">Version</string>
    <string name="version_FORMAT">Version %s</string>
    <string name="versions">Versions</string>
    <string name="waiting_to_start_download">Downloading…</string>
    <string name="whats_new">What\'s New</string>
    <string name="website">Website</string>
    <string name="prefs_language_title">Language</string>
    <string name="prefs_personalization">Personalization</string>
    <string name="show_less">Show less</string>
    <string name="latest">Latest</string>
    <string name="explore">Explore</string>
    <string name="update_all">Install all</string>
    <string name="installed_applications">Installed</string>
    <string name="sort_filter">Sort and filter</string>
    <string name="new_applications">New apps</string>
    <string name="install_after_sync">Auto-update</string>
    <string name="install_after_sync_summary">Install all new versions after looking through repositories for new apps.</string>
    <string name="prefs_updated_apps">Number of apps to show in \"Recently updated\"</string>
    <string name="prefs_new_apps">Number of apps to show in \"New apps\"</string>
    <string name="new_repository">New repository</string>
    <string name="default_tab">Default tab</string>
    <string name="pending">Pending</string>
</resources>