<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="com.looker.droidify.widget.FocusSearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/sync_repos"
        android:icon="@drawable/ic_sync"
        android:onClick="syncManual"
        android:title="@string/sync_repositories"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_tune"
        android:onClick="navigateSettings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>