<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.core.widget.NestedScrollView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingTop="4dp"
                android:paddingBottom="12dp">

                <com.google.android.material.circularreveal.CircularRevealFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:paddingVertical="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/address_mirror"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:background="?android:attr/actionBarItemBackground"
                        android:scaleType="center"
                        android:src="@drawable/ic_arrow_down"
                        android:tint="?android:attr/textColorSecondary"
                        android:tintMode="src_in"
                        android:visibility="gone"
                        tools:ignore="ContentDescription" />

                </com.google.android.material.circularreveal.CircularRevealFrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fingerprint"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:paddingVertical="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/delete"
                        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_marginHorizontal="4dp"
                        android:text="@string/delete"
                        android:textColor="?colorSurface"
                        app:backgroundTint="?colorError"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/save"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save"
                        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:layout_gravity="end"
                        android:layout_marginHorizontal="4dp"
                        android:backgroundTint="?colorPrimary"
                        android:text="@string/save"
                        android:textColor="?colorSurface"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/delete"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>
</layout>