<?xml version="1.0" encoding="utf-8"?><!--
 ~ OAndBackupX: open-source apps backup and restore app.
 ~ Copyright (C) 2020  Antonios Hazim
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU Affero General Public License as
 ~ published by the Free Software Foundation, either version 3 of the
 ~ License, or (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU Affero General Public License for more details.
 ~
 ~ You should have received a copy of the GNU Affero General Public License
 ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="14dp"
            android:text="@string/new_applications" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/secondaryComposeRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/modeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/shape_margin_medium"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textLatest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/recently_updated"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonSortFilter"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/buttonSortFilter"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_filter"
                app:chipIcon="@drawable/ic_sort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textLatest"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/primaryComposeRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/modeBar" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>

