<?xml version="1.0" encoding="utf-8"?><!--
 ~ OAndBackupX: open-source apps backup and restore app.
 ~ Copyright (C) 2020  Antonios Hazim
 ~
 ~ This program is free software: you can redistribute it and/or modify
 ~ it under the terms of the GNU Affero General Public License as
 ~ published by the Free Software Foundation, either version 3 of the
 ~ License, or (at your option) any later version.
 ~
 ~ This program is distributed in the hope that it will be useful,
 ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
 ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 ~ GNU Affero General Public License for more details.
 ~
 ~ You should have received a copy of the GNU Affero General Public License
 ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/updatedBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/shape_margin_large"
            android:layout_marginVertical="@dimen/shape_margin_small"
            android:paddingTop="2dp"
            app:layout_constraintBottom_toTopOf="@id/modeBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonUpdated"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_up"
                android:drawableTint="?attr/colorPrimary"
                android:paddingHorizontal="@dimen/shape_margin_medium"
                android:text="@string/updates"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonUpdateAll"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/buttonUpdateAll"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/shape_margin_medium"
                android:text="@string/update_all"
                app:chipIcon="@drawable/ic_download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonUpdated"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/secondaryComposeRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/modeBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/shape_margin_large"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/buttonBlocklist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/shape_margin_small"
                android:text="@string/installed_applications"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonSortFilter"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/buttonSortFilter"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/shape_margin_medium"
                android:text="@string/sort_filter"
                app:chipIcon="@drawable/ic_sort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonBlocklist"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/primaryComposeRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</layout>

